[project]
name = "generative-models-pytorch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "diffusers[torch]>=0.33.1",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "numpy>=2.3.0",
    "opencv-python>=4.11.0.86",
    "scikit-learn>=1.7.0",
    "scipy>=1.15.3",
    "torch>=2.3.1",
    "tqdm>=4.67.1",
    "transformers>=4.52.4",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu124" }
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"